centered background image

--- a/style.css
+++ b/style.css
@@ -8,3 +8,13 @@
     height: 100%;
 }
 
+.background{
+    background-color: #ABDDE6;
+}
+
+.background_image{
+    background-image: url('https://t4.ftcdn.net/jpg/02/65/86/05/360_F_265860510_OVJuWgOJ7xQCNF8rLjCy51x2hdKGVTQk.jpg');
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center top; 
+}
