--- a/style.css
+++ b/style.css
@@ -1,11 +1,17 @@
 .light_container{
     width: 80px;
     height: 80px;
+    border: solid 3px #FFC567;
+    border-radius: 5px;
+    margin: 5px;
+    box-shadow: 2px 2px 1px rgb(17, 15, 15);
 }
 
 .light_bulb{
     width: 100%;
     height: 100%;
+
+    
 }
 
 .background{
