--- a/style.css
+++ b/style.css
@@ -1,11 +1,20 @@
+*{
+    box-sizing: border-box;
+}
+
+.light_container{
+    width: 80px;
+    height: 80px;
+    border: solid 3px #FFC567;
+    border-radius: 5px;
+    margin: 5px;
+    box-shadow: 2px 2px 1px rgb(17, 15, 15);
+}
+
 .light_bulb{
 
     width: 100%;
     height: 100%;
-}
-
-.background{
-    background-color: #ABDDE6;
 }
 
 .background_image{
@@ -15,13 +24,22 @@
     background-position: center; 
 }
 
-.light_container{
-
-
-    width: 100px;
-    height: 100px;
-    border: solid 3px #FFC567;
-    border-radius: 5px;
-    margin: 5px;
-    box-shadow: 2px 2px 1px rgb(17, 15, 15);
+.background{
+    background-color: #ABDDE6;
 }
+
+
+
+body {
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+main {
+    width: 270px;
+    display: flex;
+    flex-wrap: wrap;
+}
+
